# SlowChessEngine

./: CMakeLists.txt  README.md
ChessEngine/: CMakeLists.txt  ChessEngine.cpp  ChessEngine.h  ChessGame.cpp  ChessGame.h  EngineConfig.h.in  HumanPlayer.cpp  HumanPlayer.h  NNEvaluationBot.cpp  NNEvaluationBot.h  Player.h  StaticEvaluationBot.cpp  StaticEvaluationBot.h  main.cpp
ChessEngineCore/: CMakeLists.txt  CoreConfig.h.in
ChessEngineCore/BoardRepresentation/: BB.h  Bitboard.cpp  Bitboard.h  Color.h  Move.cpp  Move.h  Position.cpp  Position.h  Square.h
ChessEngineCore/Evaluation/: NeuralNetworkEvaluator.cpp  NeuralNetworkEvaluator.h  SimpleEvaluator.cpp  SimpleEvaluator.h
ChessEngineCore/MoveGeneration/: MoveGenerator.h  MoveList.cpp  MoveList.h
ChessEngineCore/Search/: DefaultSearcher.cpp  DefaultSearcher.h  PrincipalVariationSearcher.cpp  PrincipalVariationSearcher.h  TranspositionTable.cpp  TranspositionTable.h
ChessEngineCore/Utility/: FenUtility.cpp  FenUtility.h  Zobrist.cpp  Zobrist.h
ChessEngineTest/: CMakeLists.txt  main.cpp  tst_PerftStartingPosition.h  tst_perft.h
ChessEngineTest/Perft/: tst_PerftKiwipete.h  tst_PerftPosition3.h  tst_PerftPosition4.h  tst_PerftPosition5.h  tst_PerftPosition6.h  tst_PerftStartingPosition.h
nn/: .gitignore  prepare_dataset.ipynb  train_model.ipynb
src/: CMakeLists.txt  main.cpp
src/BoardRepresentation/: BB.cpp  Bitboard.cpp  Bitboard.h  Direction.h  Piece.h  Position.cpp  Position.h  Square.h
src/MoveGeneration/: MoveGenerator.cpp
src/Search/: PerfomanceTester.cpp  PerfomanceTester.h
src/Utility/: FenUtility.cpp
